fixes annoying chrome autofill and mobile spacing

--- a/portfolio-frontend/src/style.css
+++ b/portfolio-frontend/src/style.css
@@ -64,6 +64,11 @@
     min-width: 48%;
   }
 
+  input:-webkit-autofill,
+  input:-webkit-autofill:focus {
+    transition: background-color 0s 600000s, color 0s 600000s;
+  }
+
   input.contact:focus, textarea.contact:focus {
     box-shadow: 3px 3px 12px 0px rgba(255, 255, 255, 0.3);
   }
